<resources>
    <string name="app_name">Apprueba</string>

    <!-- IMC calculation -->
    <string name="Example">Esto es un ejemplo</string>
    <string name="Female">Mujer</string>
    <string name="Man">Hombre</string>
    <string name="Height">Altura</string>
    <string name="weight">Peso</string>
    <string name="Age">Edad</string>
    <string name="Calculate">Calcular</string>
    <string name="Result">Resultado</string>
    <string name="Recalculate">Volver</string>

    <string name="error">Error</string>

    <string name="title_low_weigth">Peso bajo</string>
    <string name="description_low_weigth">Usted está por debajo de su peso óptimo.</string>

    <string name="title_normal_weight">Peso normal</string>
    <string name="description_normal_weight">Usted tiene un peso óptimo.</string>

    <string name="title_high_weight">Peso alto</string>
    <string name="description_high_weight">Usted tiene un peso por encima de lo óptimo.</string>

    <string name="title_obesity">Obesidad</string>
    <string name="description_obesity">Usted tiene exceso de peso.</string>
    <string name="saludapp">SaludApp</string>
    <string name="imc_app">IMC App</string>


    <!--ToDo App-->

    <string name="todo">TODO App</string>
    <string name="ToDo_Title">To Do.</string>
    <string name="ToDo_Categories">Categorías.</string>
    <string name="ToDo_Tasks">Tareas</string>
    <string name="ToDo_dialog_add_task">Añade la tarea</string>
    <string name="ToDo_dialog_category_business">Negocios</string>
    <string name="ToDo_dialog_category_personal">Personal</string>
    <string name="ToDo_dialog_category_other">Otros</string>
    <string name="ToDo_dialog_add_task_button">Crear tarea</string>


    <!--SuperHero App-->

    <string name="superhero">SuperHero App</string>


    <!--Settings-->

    <string name="settings">Settings</string>
    <string name="dark_mode_title">Modo oscuro</string>
    <string name="dark_mode_description">Activación del modo oscuro para un cambio visual</string>
    <string name="bluetooth_title">Bluetooth</string>
    <string name="bluetooth_description">Activación de bluetooth para conectarte con otros dispositivos</string>
    <string name="volume_title">Volumen</string>
    <string name="vibration_title">Vibrar en las llamadas</string>

</resources>