<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/todo_background_todo_app"
        tools:context=".todoapp.TodoActivity">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAllCaps="true"
          android:text="@string/ToDo_Title"
          android:textStyle="bold"
          android:textColor="@color/white"
          android:textSize="35sp"
          android:layout_marginVertical="44dp"
          android:layout_marginHorizontal="32dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ToDo_Categories"
          style="@style/TodoSubtitle"/>

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rvCategories"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ToDo_Tasks"
          android:layout_marginTop="32dp"
          style="@style/TodoSubtitle"/>

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rvTasks"
          android:layout_width="match_parent"
          android:layout_marginTop="16dp"
          android:layout_marginHorizontal="32dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@android:drawable/ic_input_add"
        android:layout_gravity="end|bottom"
        app:tint="@color/white"
        app:fabSize="normal"
        app:backgroundTint="@color/todo_accent"/>
</FrameLayout>
